tests/cases/parser/misc/double_hash.stderr
error: expected a macro invocation, either being a name identifier or a parameterised invocation `[...]`, however received a `#`
 --> $DIR/double_hash.hash:3:7
2 |   
3 |   k := ##naughty_intrinsic();
  |         ^ 
